# kokkidio

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
cmake/: KokkidioConfig.cmake  include_conf.cmake  install.cmake
spack/kokkidio-omp/: spack.yaml
spack/kokkidio-rocm/: spack.yaml
src/examples/: CMakeLists.txt  DualViewMap.cpp  ViewMap.cpp  axpy.cpp
src/examples/colmult/: CMakeLists.txt  colmult.cpp  colmult.in  colmult_eigen.cpp
src/tests/: CMakeLists.txt
src/tests/axpy/: CMakeLists.txt
src/tests/dotProduct/: CMakeLists.txt  dotProduct_native_cuda_hip.cpp  dotProduct_unif.in
src/tests/friction/: CMakeLists.txt
src/tests/include/: runAndTime.hpp
src/tests/norm/: CMakeLists.txt  norm_native_cuda_hip.cpp  norm_unif.in
src/tests/redux/: CMakeLists.txt  reduce_generic.cu  sum.cu
