# version required for HIP language support
# otherwise, version 3.18 is enough (but I don't recall for what function)
cmake_minimum_required(VERSION 3.21 FATAL_ERROR)

project("Kokkidio" VERSION 1.0.0)
set(EXTRA_VERSION "")
message(STATUS "Using CXX compiler: ${CMAKE_CXX_COMPILER}")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")

set(PROJ_CONF_DIR "${CMAKE_SOURCE_DIR}/cmake")
include(${PROJ_CONF_DIR}/include_conf.cmake)
enable_language(CXX)
include_conf(checkVar)
include_conf(checkKokkos)
include_conf(checkEigen)
include_conf(sharedOpts)
include_conf(configureTarget)
include_conf(install)

option(KOKKIDIO_ENABLE_TESTS "Enable tests" ON)
option(KOKKIDIO_ENABLE_EXAMPLES "Enable examples" ON)

enable_testing()
if (KOKKIDIO_ENABLE_EXAMPLES)
    add_subdirectory(src/examples)
endif()
if (KOKKIDIO_ENABLE_TESTS)
    add_subdirectory(src/tests)
endif()


# extra ignored files
list(APPEND CPACK_SOURCE_IGNORE_FILES
  "/.git(/.*)?"
  "/.gitignore$"
  "/.travis.yml$"
  "/.appveyor.yml$"
  "build/.*"
  ".*/.spack-env(/.*)?"
  "spack.lock$"
)

set(CPACK_PACKAGE_NAME "${PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}${EXTRA_VERSION}")
set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}${EXTRA_VERSION}")
SET(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}${EXTRA_VERSION}-${CMAKE_SYSTEM_NAME}")
set(CPACK_PACKAGE_DIRECTORY "${PROJECT_BINARY_DIR}/assets")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Kokkidio")
set(CPACK_PACKAGE_DESCRIPTION "Kokkidio.")
set(CPACK_PACKAGE_VENDOR "NumPEx")
set(CPACK_PACKAGE_CONTACT "christophe.prudhomme@cemosis.fr")
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")


set(CPACK_GENERATOR "TGZ;DEB")
set(CPACK_SOURCE_GENERATOR "TGZ")


set(CPACK_DEBIAN_PACKAGE_NAME "${PROJECT_NAME}")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_CONTACT}")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libkokkos-dev,libeigen3-dev") 
set(CPACK_DEBIAN_PACKAGE_DESCRIPTION_SUMMARY "${CPACK_PACKAGE_DESCRIPTION_SUMMARY}")
set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
set(CPACK_DEBIAN_PACKAGE_SECTION "science")
set(CPACK_DEBIAN_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}${EXTRA_VERSION}")
set(CPACK_DEBIAN_ARCHITECTURE "${CMAKE_SYSTEM_PROCESSOR}")
# set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/cmake/debian/postinst")
  
include(CPack)

